--- a/pom.xml
+++ b/pom.xml
@@ -23,13 +23,17 @@
         <artifactId>maven-jar-plugin</artifactId>
         <version>3.0.2</version>
         <configuration>
+
+    <outputDirectory>/harsha/</outputDirectory>
+  
           <archive>
             <manifest>
               <addClasspath>true</addClasspath>
-              <classpathPrefix>lib/harsha/</classpathPrefix>
+              <classpathPrefix>lib/</classpathPrefix>
               <mainClass>com.mycompany.app.App</mainClass>
             </manifest>
           </archive>
+
         </configuration>
       </plugin>
     </plugins>
